--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,10 @@ header.sticky ul li::before {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.s-locations span {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 .s-locations p {
   color: var(--dark-body-font-color);
@@ -501,4 +505,143 @@ header.sticky ul li::before {
 
 .de-server li a {
   color: var(--secondary-color);
+}
+
+/* ========================================= */
+/* jarallax section */
+/* ========================================= */
+
+.jarallax {
+  position: relative;
+  padding: 150px 15px;
+  background: url("../images/background/3.webp") no-repeat center center/cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.de-gradient-edge-top {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 30%;
+  background: linear-gradient(180deg, #1e1f22 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.de-gradient-edge-bottom {
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30%;
+  background: linear-gradient(0deg, #1e1f22 0%, rgba(255, 255, 255, 0) 100%);
+}
+
+.game-cards {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
+
+.game-cards h2 {
+  font-size: 50px;
+  line-height: 1em;
+  text-transform: capitalize;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.g-cards {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.gallary-item {
+  position: relative;
+  width: 23%;
+  border-radius: 20px;
+  margin-top: 1.5rem;
+  overflow: hidden;
+  cursor: pointer;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease-in-out;
+}
+
+.gallary-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.3s ease-in-out;
+}
+
+.gallary-item:hover img {
+  transform: scale(1.1);
+}
+
+.gallary-item .d-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.75) 0%,
+    rgba(0, 0, 0, 0) 50%
+  );
+}
+
+.d-text {
+  position: absolute;
+  bottom: -50px;
+  padding: 30px;
+  width: 100%;
+  transition: 0.5s all ease-in-out;
+}
+
+.d-text h4 {
+  font-size: 20px;
+  color: #fff;
+}
+
+.d-label {
+  position: absolute;
+  font-size: 14px;
+  top: 20px;
+  right: 20px;
+  background-color: var(--tertiary-color);
+  border-radius: 6px;
+  font-weight: 800;
+  color: #fff;
+  padding: 0 12px;
+}
+
+.price {
+  color: #fff;
+  font-weight: bold;
+  background: rgba(var(--primary-color-rgb), 5);
+  margin-left: 5px;
+  border-radius: 5px;
+  padding: 0 6px;
+}
+
+.gallary-item:hover {
+  border: 2px solid var(--primary-color);
+  box-shadow: 0 0 20px #000;
+}
+
+.gallary-item .btn_2 {
+  margin-top: 10px;
+  text-align: center;
+  opacity: 0;
+}
+
+.gallary-item:hover .btn_2 {
+  opacity: 1;
+}
+
+.gallary-item:hover .d-text {
+  margin-bottom: 50px;
 }
