--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@ header.sticky ul li::before {
   text-transform: uppercase;
   background: linear-gradient(0deg, #888 0%, #fff 75%);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -234,6 +235,7 @@ header.sticky ul li::before {
   font-family: var(--title-font);
   background: linear-gradient(0deg, #888 0%, #fff 75%);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -311,6 +313,7 @@ header.sticky ul li::before {
   padding-bottom: 5px;
   text-transform: capitalize;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -357,6 +360,7 @@ header.sticky ul li::before {
   padding-bottom: 5px;
   text-transform: capitalize;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -385,6 +389,7 @@ header.sticky ul li::before {
   line-height: 1.1em;
   text-transform: lowercase;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -480,10 +485,12 @@ header.sticky ul li::before {
   line-height: 1.1em;
   text-transform: lowercase;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 .s-locations span {
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -550,6 +557,7 @@ header.sticky ul li::before {
   line-height: 1em;
   text-transform: capitalize;
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -645,3 +653,67 @@ header.sticky ul li::before {
 .gallary-item:hover .d-text {
   margin-bottom: 50px;
 }
+
+/* ========================================= */
+/* any_question section */
+/* ========================================= */
+
+.any_question {
+  width: 100%;
+  height: auto;
+}
+
+.accordion-section-title {
+  color: #fff;
+  width: 100%;
+  height: 50px;
+  cursor: pointer;
+  font-family: var(--title-font);
+  display: inline-block;
+  font-size: 17px;
+  transition: 0.5s all linear;
+  font-weight: 600;
+  background: rgba(255, 255, 255, 0.05);
+  margin-bottom: 10px;
+  border-radius: 10px;
+  padding: 10px 10px 10px 20px;
+}
+
+.accordion-section-title::before {
+  font-family: "FontAwesome";
+  content: "\f107";
+  float: right;
+  color: #fff;
+  background: linear-gradient(
+    to right,
+    var(--primary-color),
+    var(--secondary-color)
+  );
+  text-align: center;
+  padding: 0 6px 0 6px;
+  font-size: 15px;
+  border-radius: 8px;
+  width: 30px;
+}
+
+.accordion-section-title.active::before {
+  content: "\f106";
+}
+
+.accordion-section-content {
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+  max-height: 0;
+  color: #949494;
+  overflow: hidden;
+  transition: max-height 0.5s ease, padding-top 0.5s ease;
+}
+
+.accordion-section-content.active {
+  max-height: 500px;
+  padding-top: 18px;
+}
+
+/* ========================================= */
+/* download_now section */
+/* ========================================= */
