--- a/css/style.css
+++ b/css/style.css
@@ -717,3 +717,147 @@ header.sticky ul li::before {
 /* ========================================= */
 /* download_now section */
 /* ========================================= */
+
+.download_now {
+  position: relative;
+  padding: 200px 0;
+}
+
+.download_bg {
+  position: relative;
+  background: url("../images/background/2.webp") no-repeat center center/cover;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  padding: 50px 0;
+  padding-left: 50px;
+}
+
+.dw-img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.download_bg h2 {
+  font-size: 50px;
+  line-height: 1em;
+}
+
+.download_bg p {
+  color: var(--dark-body-font-color);
+}
+
+/* ========================================= */
+/* payment_methods section */
+/* ========================================= */
+
+.payment_methods {
+  position: relative;
+  padding-bottom: 150px;
+}
+
+.payment_methods h2 {
+  font-size: 50px;
+  line-height: 1em;
+  text-transform: unset;
+}
+
+.py-img {
+  background-color: #2a2a2a;
+  border-radius: 10px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.img-fluid {
+  width: 65px;
+}
+
+/* ========================================= */
+/* footer section */
+/* ========================================= */
+
+footer {
+  background: rgba(255, 255, 255, 0.025);
+  padding: 70px 0 0 0;
+  font-size: 15px;
+  color: var(--dark-body-font-color);
+}
+
+footer p {
+  line-height: 1.8em;
+}
+
+footer ul li {
+  margin: 3px 0;
+}
+
+footer ul li:hover {
+  color: var(--secondary-color);
+  transition: 0.3s;
+}
+
+.widget h5 {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: var(--title-font);
+}
+
+footer form {
+  position: relative;
+  width: 100%;
+}
+
+footer form input {
+  width: 100%;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 14px 10px;
+  border-radius: 80px 80px 0 80px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  overflow: hidden;
+  box-shadow: 2px 2px 20px 0 rgba(255, 255, 255, 0.05);
+}
+
+footer form button {
+  right: 0;
+  padding: 60px;
+  font-size: 18px !important;
+  width: 80px;
+  height: 100%;
+  border-radius: 80px 80px 0 80px !important;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.social-icons a {
+  background-color: #333;
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-icons a i {
+  color: var(--secondary-color);
+}
+
+.social-icons a:hover {
+  background-color: #fff;
+  transition: 0.5s ease-in-out;
+}
+
+.subfooter {
+  padding: 20px 0;
+  margin-top: 60px;
+  border-top: 1px solid #333;
+}
